gccida/c0/expand_builtin_init_dwarf_reg_sizes
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_init_dwarf_reg_sizes/src/dwarf2out.c:906:30: error: use of undeclared identifier 'machine_mode'
x = adjust_address_1( mem, ( machine_mode)mode, offset, 1, 1); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_init_dwarf_reg_sizes/src/obj/dwarf2out.o] Error 1
